# tree-sitter-pascal

./: Cargo.toml
bindings/rust/: lib.rs
