[package]
name = "tree-sitter-pascal2"
description = "pascal family grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "pascal", "delphi"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/bosun-ai/tree-sitter-pascal"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.25"

[build-dependencies]
cc = "1.0"
